force-app/main/default/objects/Support_Snapshot_OCR__c/Support_Snapshot_OCR__c.object-meta.xml
<CustomObject>
    <description>Snapshot for open/Closed/Resolved cases on a day by day basis</description>
    <label>Support - Snapshot OCR</label>
    <nameField>
        <label>Support - Snapstop OCR Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Support - Snapshot OCR</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>