force-app/main/default/objects/Support_Snapshot_OCR__c/fields/Case_Owner_Division__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_Division__c</fullName>
    <label>Case Owner Division</label>
    <length>255</length>
    <type>Text</type>
</CustomField>