force-app/main/default/objects/Support_Snapshot_OCR__c/fields/Date_Recorded__c.field-meta.xml
<CustomField>
    <fullName>Date_Recorded__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Recorded</label>
    <type>Date</type>
</CustomField>