force-app/main/default/objects/Support_Snapshot_OCR__c/fields/Related_Product_Range__c.field-meta.xml
<CustomField>
    <fullName>Related_Product_Range__c</fullName>
    <description>Product</description>
    <label>Related Product Range</label>
    <length>255</length>
    <type>Text</type>
</CustomField>