force-app/main/default/objects/Support_Snapshot_OCR__c/fields/Resolved__c.field-meta.xml
<CustomField>
    <fullName>Resolved__c</fullName>
    <label>Resolved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>