force-app/main/default/objects/Support_Snapshot_OCR__c/fields/Total_Closed__c.field-meta.xml
<CustomField>
    <fullName>Total_Closed__c</fullName>
    <label>Total Closed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>